apps/production/guest-services/openspeedtest/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: openspeedtest-stripprefix
  namespace: guest-services
spec:
  stripPrefix:
    prefixes:
      - /speed
